# waze-stuff

./: .gitignore  LICENSE  README.md  package.json  tsconfig.json
hexpats/: waze_map_pkg.hexpat  wzdf.hexpat  wzt.hexpat
lib/: .gitignore  CMakeLists.txt  README.md  build.sh  renderer.c  waze_types.h  wzdf.c  wzdf.h  wzm.c  wzm.h  wzt.c  wzt.h
lib/cli/: main.c
lib/geojson/: main.c
lib/json-to-wzdf/: main.c
lib/renderer/: main.c  utils.h
protos/: AddWazerCommand.proto  Advertisement.proto  AlerterNativeManagerJniObjects.proto  AlertsOnMap.proto  AlternativeRoutesCommands.proto  AoMAsks.proto  AoMCommands.proto  AoMCommon.proto  AuditEventMessage.proto  AuditRecording.proto  AuditRecordingEnums.proto  Banners.proto  BeingWatchedResponseCommand.proto  CalendarNativeManagerJniObjects.proto  CanvasNativeCallbacksBridgeJniObjects.proto  CarpoolAdapter.proto  CarpoolClient.proto  CarpoolCommon.proto  CarpoolCommonDateTime.proto  CarpoolCommonGroups.proto  CarpoolGetInitialWeeklyView.proto  CarpoolHelperCommands.proto  CarpoolPayments.proto  ClientInfoCommand.proto  ClientTile.proto  Common.proto  CommunityCommands.proto  ConfigCommands.proto  ConversationalReporting.proto  Copilot.proto  CopilotNativeManagerJniObjects.proto  CrashNativeManagerJniObjects.proto  CreateMeetingResponseCommand.proto  DistanceUnit.proto  Doc.proto  DriveDetection.proto  DriveToNativeManagerJniObjects.proto  ETA.proto  EVNetworksNativeManagerJniObjects.proto  Engagements.proto  (+120 more)
protos/adevents/: ad_interaction_event_wrapper.proto
protos/asks/: AsksAnswers.proto  AsksQuestions.proto
protos/assistant/: FeatureId.proto  GoogleMapsSessionState.proto  NavigationAppParam.proto  PlaceId.proto  ResultSetForMapsClient.proto
protos/carpool/: NativeBootstrapWidgetParameters.proto
protos/conversation/: ConversationManager.proto
protos/conversation/reporting/: ConversationalReportingDetails.proto
protos/linqmap/ipc/: TaggedMessage.proto
protos/marketplace/: MarketplaceCache.proto
protos/metrics/: login_request_metric.proto  routing_request_metric.proto
protos/prompts/: CustomPrompts.proto
protos/replay/: Replay.proto  ReplayIosLocation.proto
protos/root/: ad_event_payload.proto  client_metrics.proto  waze_app_payload.proto  waze_app_unauthenticated_payload.proto
protos/stats/ads_stats_wrapper/: ad_generic_event_stat.proto  ad_information.proto  ad_navigate_around_destination_stat.proto  ad_navigate_arrived_stat.proto  ad_navigate_start_stat.proto  ad_navigate_stopped_stat.proto  road_type.proto  user_location_information.proto
protos/stats/alternate_routes_stats_wrapper/: alternative_route.proto  alternative_routes_blocking_popup_clicked_stat.proto  alternative_routes_blocking_popup_shown_stat.proto  alternative_routes_fte_tooltip_shown_stat.proto  alternative_routes_loader_hidden_stat.proto  alternative_routes_screen_clicked_stat.proto  alternative_routes_screen_mode_updated_stat.proto  alternative_routes_screen_shown_stat.proto  alternative_routes_shown_stat.proto  in_car_alternative_routes_button_clicked_stat.proto  route_card_timeline_shown_stat.proto  routes_screen_clicked_stat.proto  routes_screen_shown_stat.proto  (+1 more)
protos/v2/: CalculateRoute.proto  RouteUpdate.proto  UserDriveV2.proto
protos/wrappers/: ads_stats_wrapper.proto  alternate_routes_stats_wrapper.proto  app_lifecycle_stats_wrapper.proto  beacon_stats_wrapper.proto  carplay_stats_wrapper.proto  client_eng_stats_wrapper.proto  cluster_stats_wrapper.proto  co_pilot_stats_wrapper.proto  common_wrapper.proto  consent_stats_wrapper.proto  conversation_stats_wrapper.proto  deeplink_stats_wrapper.proto  destination_card_stats_wrapper.proto  detour_stats_wrapper.proto  drive_detection_stats_wrapper.proto  drive_suggestion_stats_wrapper.proto  encouragement_stats_wrapper.proto  eta_stats_wrapper.proto  ev_stats_wrapper.proto  favorites_stats_wrapper.proto  google_ads_stats_wrapper.proto  google_assistant_stats_wrapper.proto  gps_stats_wrapper.proto  guidance_stats_wrapper.proto  in_car_main_screen_stats_wrapper.proto  inbox_stats_wrapper.proto  insight_component_stats_wrapper.proto  location_preview_stats_wrapper.proto  main_menu_stats_wrapper.proto  map_stats_wrapper.proto  music_player_stats_wrapper.proto  navigation_stats_wrapper.proto  network_stats_wrapper.proto  parking_stats_wrapper.proto  performance_stats_wrapper.proto  permissions_stats_wrapper.proto  planned_drive_stats_wrapper.proto  push_stats_wrapper.proto  real_time_alerter_stats_wrapper.proto  reporting_stats_wrapper.proto  (+21 more)
scripts/: compress_wzt.py  create_dummy_wzt.py  create_map_pkg.py  create_wzt.py  decompress_wzdf.py  download_tiles_radius.py  draw_wzt.py  generate_tile_from_lat_lon.py  generate_tiles.py  get_tile_id.py  get_tile_ids_around.py  json_to_wzt.py  modify_map_pkg.py  process_waze_tile.py  split_map_pkg.py  waze_scales.py  waze_tile_classes.py  waze_util.py
src/: AA_test.ts  RealtimeCommandHandler.ts  index.ts  parseGeoJSON.ts  redirector_test.ts  scaleGeoJSON.ts
(+584 files in other folders)
